--- a/src/app/core/shell/header/header.component.html
+++ b/src/app/core/shell/header/header.component.html
@@ -1,1 +1,10 @@
-<p>header works!</p>
+<nav class="navbar navbar-dark bg-dark">
+
+    <span class="navbar-brand mb-3" style="margin: 0px">
+        <h3>  Lets Work</h3>
+    </span>
+    <button class="navbar-toggler" type="button" style="margin: 0%" data-toggle="collapse" data-target="#navbarToggleExternalContent"
+        aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+</nav>
