added filter and sorting functionality in the venues module

--- a/src/app/home-page/home-page-search-box/home-page-search-box.component.html
+++ b/src/app/home-page/home-page-search-box/home-page-search-box.component.html
@@ -1,5 +1,5 @@
 <ngx-spinner bdColor="rgba(256,256,256,0.8)" size="medium" color="#000" type="square-jelly-box">
-    <p style="font-size: 50px; color: black">Let's Work</p>
+    <h1 style="font-size: 50px; color: black">LET'S WORK</h1>
 </ngx-spinner>
 <body>
 <div class="bg-img" >
