--- a/src/app/venues/results-page/results-page.component.css
+++ b/src/app/venues/results-page/results-page.component.css
@@ -1,3 +1,23 @@
 .cards{
-    margin:70px;
+    margin:50px;
 }
+
+
+   .sidebar{
+    height: 520px;
+    border: 40px;
+    border-style: initial;
+    border-width: 5px;
+    padding-top: 20px;
+    padding-left: 50px;
+    padding-right: 50px;
+    background-color: wheat;
+}
+
+.side{
+  height: 520px;
+  padding-top: 0.5px;
+  padding-left: 30px;
+  padding-right: 30px;
+}
+ 
