--- a/src/app/venues/results-page/results-page.component.html
+++ b/src/app/venues/results-page/results-page.component.html
@@ -1,11 +1,43 @@
-<h1 class="display-3">&nbsp;Venues</h1>
-<div class="cards" *ngFor="let venue of venues">
-    <div class="card" class="shadow p-3 mb-5 bg-white rounded" style="width: 65rem;">
-        <div class="card-body">
-            <h5 class="card-title">VenueName: {{venue.venueName}}</h5>
-            <p class="card-text">City: {{venue.city}}</p>
-            <p class="card-text">Description: {{venue.description}}</p>
-            <p class="card-text">Price: {{venue.price}}</p>
-        </div>
-    </div>
-</div>
+<ngx-spinner bdColor="#333" size="medium" color="#fff" type="ball-circus">
+    <p style="font-size: 20px; color:black;" >Loading..</p>
+</ngx-spinner>
+
+<mat-drawer-container class="example-container">
+
+    <mat-drawer mode="side" opened class="sidebar">
+
+         <h1>FILTER</h1>
+        <br>
+        <br>
+        <h2>Filter by price</h2>
+        <br>
+        <mat-checkbox (change)="onChkChange()">price > 5000</mat-checkbox>
+        <br>
+        <h3>Filter by rating</h3>
+        <br>
+        <mat-checkbox value="check" (change)="onChkChangerating(check)">rating > 5</mat-checkbox>
+        <br><br>
+       
+    </mat-drawer>&nbsp;&nbsp;
+
+    <mat-drawer-content opened class="side">
+        <h1 class="display-3" >&nbsp;Venues</h1>
+        <button (click)="changeit()">sort on price</button>&nbsp;&nbsp;&nbsp;
+         <div *ngIf="filtervenues"> 
+            <div class="cards" *ngFor="let venue of filtervenues">
+                <div class="card" class="shadow p-3 mb-5 bg-white rounded" style="width: 50rem;">
+                    <div class="card-body">
+                        <h5 class="card-title">VenueName: {{venue.venueName}}</h5>
+                        <p class="card-text">City: {{venue.city}}</p>
+                        <p class="card-text">Description: {{venue.description}}</p>
+                        <p class="card-text">Price: {{venue.price}}</p>
+                        <p class="card-text">Rating: {{venue.rating}}</p>
+                    </div>
+                </div>
+            </div>
+         </div> 
+    </mat-drawer-content>
+
+   
+
+</mat-drawer-container>
