modified ui and added validation in home page

--- a/src/app/home-page/home-page-search-box/home-page-search-box.component.html
+++ b/src/app/home-page/home-page-search-box/home-page-search-box.component.html
@@ -1,47 +1,72 @@
 <ngx-spinner bdColor="rgba(256,256,256,0.8)" size="medium" color="#000" type="square-jelly-box">
-    <h1 style="font-size: 50px; color: black">LET'S WORK</h1>
+    <p style="font-size: 50px; color: black">Let's Work</p>
 </ngx-spinner>
+
 <body>
-<div class="bg-img" >
-    <form class="container">
-        <div class="form-group">
-            <p>
-                <label><b>Capacity</b></label>
-                <input [(ngModel)]="capacity" class="form-control" name="Capacity" required>
-            </p>
-        </div>
-        <div class="form-group">
-            <p>
-                <label><b>City</b></label>
-                <select name="City" [(ngModel)]="city" class="form-control" required>
-                    <option *ngFor="let cityOption of cities" [value]="cityOption">{{cityOption}}</option>
-                </select>
-            </p>
-        </div>
-        <div class="form-group">
-            <p>
-                <label><b>Date</b></label>
-                <input name="date" type="date" [(ngModel)]="date" min="{{formattedDate}}" class="form-control" required>
-            </p>
-        </div>
-        <br>
-        <div class="form-group">
-            <p>
-                <label><b>Venue Type</b></label>
-                &nbsp;
-                <select name="VenueType" [(ngModel)]="venueType">
-                    <option value="Meeting">Meeting</option>
-                    <option value="Conference">Conference</option>
-                    <option value="Training">Training</option>
-                    <option value="Workshop">Workshop</option>
-                </select>
-            </p>
-        </div>
-        <br>
-        <button type="submit" (click)="submit()" class="btn">Search</button>
-        <a href="#" style="color: orangered"></a>
-    </form>
-</div>
+    <div class="bg-img">
+        <form [formGroup]="registerForm" class="container" (ngSubmit)="submit()" >
+            <div class="form-group">
+                <p>
+                    <label>
+                        <b>Capacity</b>
+                    </label>
+                </p>
+                <input id="Capacity" formControlName="formCapacity" class="form-control">
+
+                <div *ngIf="submitted && registerForm.controls['formCapacity'].invalid" class="alert alert-danger">
+                    Capacity is required.
+                </div>
+
+            </div>
+            <div class="form-group">
+                <p>
+                    <label>
+                        <b>City</b>
+                    </label>
+                    <select name="City" formControlName="formCity" class="form-control">
+                        <option *ngFor="let cityOption of cities" [value]="cityOption">{{cityOption}}</option>
+                    </select>
+                </p>
+                <div *ngIf="submitted && registerForm.controls['formCity'].invalid" class="alert alert-danger">
+                    City is required.
+                </div>
+
+            </div>
+            <div class="form-group">
+                <p>
+                    <label>
+                        <b>Date</b>
+                    </label>
+                    <input name="date" type="date" formControlName="formDate" min="{{formattedCurrentDate}}" max="{{formattedMaxDate}}" class="form-control">
+                </p>
+                <div *ngIf="submitted && registerForm.controls['formDate'].invalid" class="alert alert-danger">
+                    Date is required.
+                </div>
+            </div>
+            <br>
+            <div class="form-group">
+                <p>
+                    <label>
+                        <b>Venue Type</b>
+                    </label>
+                    &nbsp;
+                    <select name="VenueType" formControlName="formVenueType" class="form-control">
+                        <option value="Meeting">Meeting</option>
+                        <option value="Conference">Conference</option>
+                        <option value="Training">Training</option>
+                        <option value="Workshop">Workshop</option>
+                    </select>
+                </p>
+                <div *ngIf="submitted && registerForm.controls['formVenueType'].invalid" class="alert alert-danger">
+                    Venue Type is required.
+                </div>
+            </div>
+            <br>
+            <button type="submit" class="btn">Search</button>
+            <a href="#" style="color: orangered"></a>
+        </form>
+
+    </div>
 </body>
 
 <router-outlet></router-outlet>
