--- a/src/app/core/shell/header/header.component.html
+++ b/src/app/core/shell/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-dark bg-dark">
 
     <span class="navbar-brand mb-3" style="margin: 0px">
-        <h2 >  Lets Work</h2>
+        <h2 >  Let's Work</h2>
     </span>
     <button class="navbar-toggler" type="button" style="margin: 0%" data-toggle="collapse" data-target="#navbarToggleExternalContent"
         aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
