--- a/src/app/venues/results-page/results-page.component.css
+++ b/src/app/venues/results-page/results-page.component.css
@@ -1,21 +1,23 @@
 .cards{
-    margin:50px;
+    margin:10px;
 }
 
 
    .sidebar{
-    height: 520px;
+    height: 550px;
+    position:fixed;
     border: 40px;
     border-style: initial;
     border-width: 5px;
     padding-top: 20px;
     padding-left: 50px;
     padding-right: 50px;
+    margin-top:100px;
     background-color: wheat;
 }
 
 .side{
-  height: 520px;
+  height:100%;
   padding-top: 0.5px;
   padding-left: 30px;
   padding-right: 30px;
