--- a/src/app/venues/results-page/results-page.component.css
+++ b/src/app/venues/results-page/results-page.component.css
@@ -10,10 +10,14 @@
     border-style: initial;
     border-width: 5px;
     padding-top: 20px;
-    padding-left: 50px;
+    padding-left: 20px;
     padding-right: 50px;
     margin-top:100px;
     background-color: wheat;
+}
+
+.sidebar mat-checkbox{
+    padding-left:20px;
 }
 
 .side{
