--- a/src/app/venues/details-page/map/map.component.html
+++ b/src/app/venues/details-page/map/map.component.html
@@ -1,1 +1,8 @@
-<p>map works!</p>
+<div class="container">
+  <div class="row">
+
+    <!--The div element for the map -->
+    <div id="map"></div>
+
+  </div>
+</div>
