--- a/src/app/home-page/home-page-search-box/home-page-search-box.component.css
+++ b/src/app/home-page/home-page-search-box/home-page-search-box.component.css
@@ -10,33 +10,29 @@ body, html {
   .bg-img {
     
     background-image: url("../../../assets/homepage.jpg");
+    /* height:auto; */
     min-height: 706px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
+    padding-top:40px;
+    padding-left:40px;
   }
-  
+  .mat-card{
+    width:25em;
+    background-color: rgb(255, 255, 255,0.7)
+  }
 
-  .container {
-    position: center;
-    right: 50;
-    margin-left: 60px;
-    max-width: 300px;
-    padding-top: 65px;
-    background-color:transparent;
-  }
-  
-  
-    input[type=text], input[type=password] {
+   .mat-card input[type=text], input[type=password] {
     width: 100%;
     padding: 15px;
-    margin: 5px 0 22px 0;
+    margin-left:20px;
     border: none;
     background: #f1f1f1;
   }
   
-  input[type=text]:focus, input[type=password]:focus {
+  .mat-card input[type=text]:focus, input[type=password]:focus {
     background-color: #ddd;
     outline: slategrey;
   }
