--- a/src/app/venues/results-page/results-page.component.html
+++ b/src/app/venues/results-page/results-page.component.html
@@ -9,10 +9,10 @@
             <br>
             <br>
             <h2>Price</h2>
-            <mat-checkbox (change)="onChkChange()">price > 5000</mat-checkbox>
+            <mat-checkbox (change)="onChkChange()">&nbsp;price > 5000</mat-checkbox>
             <hr>
             <h3>Rating</h3>
-            <mat-checkbox value="check" (change)="onChkChangerating(check)">rating > 5</mat-checkbox>
+            <mat-checkbox value="check" (change)="onChkChangerating(check)">&nbsp;rating > 5</mat-checkbox>
             <br>
             <br>
 
@@ -41,7 +41,7 @@
                             </div>
                         </div>
                         <div>
-                                <button mat-button routerLink="detail/{{venue.venueId}}">see details</button>
+                                <button mat-button routerLink="detail/{{venue.venueId}}/">see details</button>
                         </div>
                     </div>
                 </div>
