added redirect to home page functionality on clickon sweet alert

--- a/src/app/venues/results-page/results-page.component.html
+++ b/src/app/venues/results-page/results-page.component.html
@@ -41,7 +41,7 @@
                             </div>
                         </div>
                         <div>
-                                <button mat-button routerLink="detail/{{venue.venueId}}/">see details</button>
+                                <button mat-button routerLink="detail/{{venue.venueId}}">see details</button>
                         </div>
                     </div>
                 </div>
