--- a/src/app/venues/results-page/results-page.component.html
+++ b/src/app/venues/results-page/results-page.component.html
@@ -1,60 +1,58 @@
 <ngx-spinner bdColor="#333" size="medium" color="#fff" type="ball-circus">
-  <p style="font-size: 20px; color:black;">Loading..</p>
+    <p style="font-size: 20px; color:black;">Loading..</p>
 </ngx-spinner>
 <!-- <div *ngIf="filtervenues"> -->
-<mat-drawer-container class="example-container">
+    <mat-drawer-container class="example-container">
 
-  <mat-drawer mode="side" opened class="sidebar">
+        <mat-drawer mode="side" opened class="sidebar">
 
-    <br>
-    <br>
-    <h2>Price</h2>
-    <mat-checkbox (change)="onChkChange()">&nbsp;price > 5000</mat-checkbox>
-    <hr>
-    <h3>Rating</h3>
-    <mat-checkbox value="check" (change)="onChkChangerating(check)">&nbsp;rating > 5</mat-checkbox>
-    <br>
-    <br>
+            <br>
+            <br>
+            <h2>Price</h2>
+            <mat-checkbox (change)="onChkChange()">&nbsp;price > 5000</mat-checkbox>
+            <hr>
+            <h3>Rating</h3>
+            <mat-checkbox value="check" (change)="onChkChangerating(check)">&nbsp;rating > 5</mat-checkbox>
+            <br>
+            <br>
 
-    <app-map></app-map>
-  </mat-drawer>&nbsp;&nbsp;
+        </mat-drawer>&nbsp;&nbsp;
 
-  <mat-drawer-content opened class="side">
-    <h3>&nbsp;Venues</h3>
-    <br>
-    <button (click)="changeit()" class="btn btn-secondary">sort on price</button>&nbsp;&nbsp;&nbsp;
-
-    <button (click)="changedit()" class="btn btn-secondary">sort on rating </button>&nbsp;&nbsp;&nbsp;
-    <br>
-    <br>
-    <div *ngIf="filtervenues">
-      <div class="card mb-3" class="shadow p-3 mb-5 bg-white rounded" *ngFor="let venue of filtervenues"
-        style="width:65em">
-        <div class="row no-gutters">
-          <div class="col-md-4">
-            <img src="../../../assets/placeholder.jpg" class="card-img" alt="...">
-          </div>
-          <div class="col-md-7">
-            <div class="card-body">
-              <h5 class="card-title">VenueName: {{venue.venueName}}</h5>
-              <p class="card-text">City: {{venue.city}}</p>
-              <p class="card-text">Price: {{venue.price}}</p>
-              <p class="card-text">Rating: {{venue.rating}}</p>
+        <mat-drawer-content opened class="side">
+            <h3>&nbsp;Venues</h3>
+            <br>
+            <button (click)="changeit()"  class="btn btn-secondary">sort on price</button>&nbsp;&nbsp;&nbsp;
+            
+            <button (click)="changedit()" class="btn btn-secondary">sort on rating </button>&nbsp;&nbsp;&nbsp;
+            <br>
+            <br>
+            <div *ngIf="filtervenues">
+                <div class="card mb-3"  class="shadow p-3 mb-5 bg-white rounded" *ngFor="let venue of filtervenues" style="width:65em">
+                    <div class="row no-gutters">
+                        <div class="col-md-4">
+                            <img src="../../../assets/placeholder.jpg" class="card-img" alt="..." >
+                        </div>
+                        <div class="col-md-7">
+                            <div class="card-body">
+                                <h5 class="card-title">VenueName: {{venue.venueName}}</h5>
+                                <p class="card-text">City: {{venue.city}}</p>
+                                <p class="card-text">Price: {{venue.price}}</p>
+                                <p class="card-text">Rating: {{venue.rating}}</p>
+                            </div>
+                        </div>
+                        <div>
+                                <button mat-button routerLink="detail/{{venue.venueId}}">see details</button>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
-          <div>
-            <button mat-button routerLink="detail/{{venue.venueId}}">see details</button>
-          </div>
-        </div>
-      </div>
-    </div>
 
-    <div *ngIf="!filtervenues">
-      <p>No Venues available</p>
-    </div>
+            <div *ngIf="!filtervenues">
+                    <p>No Venues available</p>
+                    </div> 
 
-  </mat-drawer-content>
-</mat-drawer-container>
+        </mat-drawer-content>
+    </mat-drawer-container>
 <!-- </div> -->
 <!-- <div *ngIf="!flag">
     <h2>No venues available, Suggestions coming soon..</h2>
