changed button in result page and fixed 'BUG'

--- a/src/app/venues/results-page/results-page.component.html
+++ b/src/app/venues/results-page/results-page.component.html
@@ -41,7 +41,7 @@
                         </div>
                     </div>
                     <div>
-                        <button mat-raised-button color="primary" routerLink="detail/{{venue.venueId}}">see details</button>
+                        <button class="btn btn-secondary" routerLink="detail/{{venue.venueId}}">see details</button>
                     </div>
                 </div>
             </div>
