--- a/src/app/core/shell/header/header.component.html
+++ b/src/app/core/shell/header/header.component.html
@@ -13,13 +13,13 @@
     <!-- <div class="container-fluid"> -->
     <div class="navbar-header">
       <a class="navbar-brand"><img src="assets/logo.png" class="logo"></a>
-      <span class="navbar-brand">Jyoti's Booking Site</span>
+      <span class="navbar-brand">Let's Work :)</span>
     </div>
     <ul class="navbar-nav">
       <li class="nav-item"><a class="nav-link" routerLink="getUser/Jyoti">Home</a></li>
     </ul>
     <ul class="navbar-nav ml-auto">
-      <li class="nav-item"><a class="nav-link" href="#">Sign Up</a></li>
+      <!-- <li class="nav-item"><a class="nav-link" href="#">Sign Up</a></li> -->
       <li class="nav-item"><a class="nav-link" routerLink="getUser/Jyoti">Login</a></li>
     </ul>
     <!-- </div> -->
