--- a/src/app/core/shell/header/header.component.html
+++ b/src/app/core/shell/header/header.component.html
@@ -13,7 +13,7 @@
     <!-- <div class="container-fluid"> -->
     <div class="navbar-header">
       <a class="navbar-brand"><img src="assets/logo.png" class="logo"></a>
-      <span class="navbar-brand">Let's Work :)</span>
+      <span class="navbar-brand">Let's Work</span>
     </div>
     <ul class="navbar-nav">
       <li class="nav-item"><a class="nav-link" routerLink="getUser/Jyoti">Home</a></li>
