--- a/src/app/venues/details-page/read-details/read-details.component.html
+++ b/src/app/venues/details-page/read-details/read-details.component.html
@@ -2,12 +2,12 @@
   <p style="font-size: 20px; color:black;">Loading..</p>
 </ngx-spinner>
 <div *ngIf=flag>
-  <div *ngIf="venue.image?.length">
+  <div *ngIf="venue.images?.length">
     <mat-card class="slider">
       <ngb-carousel>
-        <ng-template ngbSlide *ngFor="let img of venue.image">
+        <ng-template ngbSlide *ngFor="let img of venue.images">
           <div class="picsum-img-wrapper">
-            <img mat-card-image src="{{img}}" alt="{{venue.venueName}}" style="max-height:300px; margin:0 auto;">
+            <img mat-card-image src="{{img}}" alt="{{venue.name}}" style="max-height:300px; margin:0 auto;">
           </div>
         </ng-template>
       </ngb-carousel>
@@ -16,9 +16,9 @@
       </div>
     </mat-card>
   </div>
-  <div *ngIf="!venue.image?.length">
+  <div *ngIf="!venue.images?.length">
 
-    <p>{{venue.venueName}} image not found </p>
+    <p>{{venue.name}} image not found </p>
 
   </div>
 
@@ -26,7 +26,7 @@
     <div class="row no-gutters">
 
       <div class="card-body">
-        <h3 class="card-title"> {{venue.venueName}}</h3>
+        <h3 class="card-title"> {{venue.name}}</h3>
         <h5>{{venue.address}}</h5>
 
         <p class="card-text">{{venue.description}}</p>
@@ -36,13 +36,13 @@
         <p>
           <font size="5">Features</font>
         </p>
-        <div *ngIf="venue.feature?.length">
-          <div *ngFor="let feature of venue.feature">
+        <div *ngIf="venue.features?.length">
+          <div *ngFor="let feature of venue.features">
             {{feature}}
           </div>
         </div>
 
-        <div *ngIf="!venue.feature?.length">
+        <div *ngIf="!venue.features?.length">
           features unknown
         </div>
 
