--- a/src/app/authentication/signup/signup.component.html
+++ b/src/app/authentication/signup/signup.component.html
@@ -1,1 +1,57 @@
-<p>signup works!</p>
+<div class="container" style="padding: 5%">
+  <div class="card">
+    <div class="card-header">LogIn</div>
+    <div class="card-body">
+      <div class="row">
+        <div class="col-4">
+          <label>Username:</label>
+        </div>
+        <div class="col-8">
+          <input mdbInput type="text" id="username" [(ngModel)]="username" class="form-control" />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-4">
+          <label>Real Name:</label>
+        </div>
+        <div class="col-8">
+          <input mdbInput type="text" id="realname" [(ngModel)]="realname" class="form-control" />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-4">
+          <label>Password:</label>
+        </div>
+        <div class="col-8">
+          <input mdbInput type="email" id="text" [(ngModel)]="password" class="form-control" />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-4">
+          <label>Confirm Password:</label>
+        </div>
+        <div class="col-8">
+          <input mdbInput type="text" id="text" [(ngModel)]="confirmpassword" class="form-control" />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-4">
+          <label>Email:</label>
+        </div>
+        <div class="col-8">
+          <input mdbInput type="text" id="email" [(ngModel)]="email" class="form-control" />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-4">
+          <label>Referal Code:</label>
+        </div>
+        <div class="col-8">
+          <input mdbInput type="text" id="referral" [(ngModel)]="referral" class="form-control" />
+        </div>
+      </div>
+      <button class="button" (click)="onSelect()">Signup</button>
+    </div>
+    <a class="nav-link active" [routerLink]="['/login']" routerLinkActive="active" style="text-align: center">Have an account? Login</a>
+  </div>
+</div>
