--- a/src/app/core/shell/header/header.component.html
+++ b/src/app/core/shell/header/header.component.html
@@ -20,7 +20,7 @@
   </ul>
   <ul class="navbar-nav ml-auto">
     <!-- <li class="nav-item"><a class="nav-link" href="#">Sign Up</a></li> -->
-    <li class="nav-item"><a class="nav-link" routerLink="getUser/Jyoti">Login</a></li>
+    <li class="nav-item"><a class="nav-link" routerLink="login">Login</a></li>
   </ul>
   <!-- </div> -->
 </nav>
