--- a/src/app/authentication/admin/admin.component.html
+++ b/src/app/authentication/admin/admin.component.html
@@ -1,1 +1,10 @@
-<p>admin works!</p>
+<div class="container">
+  <div class="row">
+    <ul class="list-group">
+      <li class="list-group-item" *ngFor="let venue of venues; index as i">
+        {{ venue.name }}
+      </li>
+    </ul>
+  </div>
+
+</div>
