--- a/src/app/venues/results-page/results-page.component.html
+++ b/src/app/venues/results-page/results-page.component.html
@@ -40,8 +40,11 @@
                             <p class="card-text">Rating: {{venue.rating}}</p>
                         </div>
                     </div>
-                    <div>
-                        <button mat-raised-button color="primary" routerLink="detail/{{venue.venueId}}">see details</button>
+                    
+                    <div style="margin-right: 10px">
+                        <br>
+                      
+                        <button class="btn btn-secondary" routerLink="detail/{{venue.venueId}}">see details</button>
                     </div>
                 </div>
             </div>
