Add venues to venue list in admin components \ Use getDetails(i) subscript with some hardcoding lovin

--- a/src/app/authentication/admin/admin.component.html
+++ b/src/app/authentication/admin/admin.component.html
@@ -2,7 +2,9 @@
   <div class="row">
     <ul class="list-group">
       <li class="list-group-item" *ngFor="let venue of venues; index as i">
-        {{ venue.name }}
+        {{ venue.venueId }}
+        <br>
+        {{ venue.venueName }}
       </li>
     </ul>
   </div>
