--- a/src/app/core/shell/header/header.component.html
+++ b/src/app/core/shell/header/header.component.html
@@ -20,8 +20,10 @@
   </ul>
   <ul class="navbar-nav ml-auto">
     <!-- <li class="nav-item"><a class="nav-link" href="#">Sign Up</a></li> -->
-    <li class="nav-item" *ngIf="!isLoggedIn"><a class="nav-link" routerLink="login">Login</a></li>
-    <li class="nav-item" *ngIf="isLoggedIn"><a class="nav-link" routerLink="/">Logout</a></li>
+    <li class="nav-item" *ngIf="!isLoggedIn"><a class="nav-link" routerLink="login" (click)="onLogin(item)">Login</a>
+    </li>
+    <li class="nav-item" *ngIf="isLoggedIn"><a class="nav-link" routerLink="/" (click)="onLogout(item)">Logout</a>
+    </li>
   </ul>
   <!-- </div> -->
 </nav>
