--- a/src/app/core/shell/header/header.component.html
+++ b/src/app/core/shell/header/header.component.html
@@ -20,9 +20,9 @@
   </ul>
   <ul class="navbar-nav ml-auto">
     <!-- <li class="nav-item"><a class="nav-link" href="#">Sign Up</a></li> -->
-    <li class="nav-item" *ngIf="!isLoggedIn"><a class="nav-link" routerLink="login" (click)="onLogin(item)">Login</a>
+    <li class="nav-item" *ngIf="!isLoggedIn"><a class="nav-link" routerLink="login" (click)="onLogin($event)">Login</a>
     </li>
-    <li class="nav-item" *ngIf="isLoggedIn"><a class="nav-link" routerLink="/" (click)="onLogout(item)">Logout</a>
+    <li class="nav-item" *ngIf="isLoggedIn"><a class="nav-link" routerLink="/" (click)="onLogout($event)">Logout</a>
     </li>
   </ul>
   <!-- </div> -->
