Fix typo in read-details html component \ Features shoould be feature

--- a/src/app/venues/details-page/read-details/read-details.component.html
+++ b/src/app/venues/details-page/read-details/read-details.component.html
@@ -36,13 +36,13 @@
         <p>
           <font size="5">Features</font>
         </p>
-        <div *ngIf="venue.features?.length">
+        <div *ngIf="venue.feature?.length">
           <div *ngFor="let feature of venue.feature">
             {{feature}}
           </div>
         </div>
 
-        <div *ngIf="!venue.features?.length">
+        <div *ngIf="!venue.feature?.length">
           features unknown
         </div>
 
